[package]
name = "wasm-webtransport"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
kyproto = { version = "0.1", path = "../kyproto", features = ["webtransport-js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "DomRect",
    "Element",
    "HtmlCollection",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "Node",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "TextDecoder",
    "TextEncoder",
    "WebTransport",
    "WebTransportBidirectionalStream",
    "WebTransportDatagramDuplexStream",
    "WebTransportReceiveStream",
    "WebTransportSendStream",
    "Window",
    "WritableStream",
    "WritableStreamDefaultWriter",
]
